--- a/naps-cli/package.json
+++ b/naps-cli/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.12.2",
     "babel-preset-expo": "^54.0.3",
     "dotenv": "^17.2.2",
-    "expo": "~54.0.9",
+    "expo": "~54.0.0",
+    "expo-audio": "^1.0.13",
     "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
@@ -38,7 +39,8 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "^6.0.7",
     "qs": "^6.14.0",
-    "react": "19.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
@@ -48,7 +50,6 @@
     "react-native-pager-view": "^6.9.1",
     "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~4.1.1",
-    "react-native-redux-router": "^1.0.7",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -65,6 +66,7 @@
     "@react-native-community/cli": "^20.0.2",
     "@react-native/metro-config": "^0.82.0",
     "@types/react": "~19.1.10",
-    "babel-plugin-inline-dotenv": "^1.7.0"
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "babel-preset-expo": "~54.0.0"
   }
 }
