--- a/naps-cli/package.json
+++ b/naps-cli/package.json
@@ -26,8 +26,10 @@
     "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
     "expo-contacts": "~15.0.9",
     "expo-dev-client": "~6.0.15",
+    "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
     "expo-haptics": "~15.0.7",
     "expo-image-manipulator": "~14.0.7",
