--- a/naps-cli/package.json
+++ b/naps-cli/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/drawer": "^7.5.10",
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.26",
