--- a/naps-cli/package.json
+++ b/naps-cli/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -32,6 +33,7 @@
     "expo-dev-client": "~6.0.15",
     "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
@@ -41,6 +43,7 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "^6.0.7",
+    "lucide-react-native": "^0.546.0",
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -61,6 +64,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.2",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "react-router-native": "^6.30.0"
   },
